# snake

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  config.h
engine/: CMakeLists.txt  InstanceManager.h  run.cpp  utils.cpp  utils.h
engine/component/: Asset.cpp  Asset.h  WindowGrid.h  cBoundingBox.cpp  cBoundingBox.h  cDirection.h  cScore.cpp  cScore.h
engine/entity/: apple.cpp  apple.h  border.cpp  border.h  snake.cpp  snake.h
engine/system/: Asset.cpp  Event_Handler.h  Physics.cpp  Physics.h
snake/: ai.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
